Jump to anchor link and highlight (fixes #163)
Browsers already jump to anchor links, however
we had two issues with our system:

1) Anchor links within panels were ignored as
the parent was set to display: none. I've added
a JavaScript function to find these anchors and
open the panel.

2) Anchor links were hidden behind the top nav
bar on mobile devices. We had a solution for
this before, but wasn't used in all situations.
I've used our solution in all anchor link
situations, however I would like to keep testing
our current solution.

--- a/generator/scss/website.scss
+++ b/generator/scss/website.scss
@@ -64,13 +64,20 @@ ul.side-nav.fixed li a {
 .section_number {
   color: $primary-color-light !important;
 }
-.section_heading {
-  padding-top: 85px;
-  margin-top: -70px;
+.anchor-link {
+  padding-top: 100px;
+  margin-top: -90px;
   pointer-events: none;
+  outline: none;
   & > a {
     pointer-events: auto;
   }
+  &-empty {
+    position: absolute;
+  }
+}
+.section-heading {
+  //@extend .anchor-link;
   #page-title-header & > a {
     color: white !important;
   }
@@ -200,7 +207,8 @@ ul.side-nav.fixed li a {
     width: 32%;
   }
 }
-.glossary-anchor-link:target {
+.glossary-anchor-link:target,
+.glossary-anchor-link-highlight {
   background-color: color("deep-orange", "lighten-3");
   background-clip: content-box;
 }
